[package]
name = "spotimine"
version = "0.1.0"
edition = "2021"
authors = ["nextdaydelivery"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
colored = "2.0.0"
reqwest = { version = "0.11.4", features = ["blocking", "json"] }
rand = "0.8.5"
open = "3.2.0"
sha2 = "0.10.6"
base64 = "0.20.0"
serde_json = "1.0.91"
serde = { version = "1.0.130", features = ["derive"] }